--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,10 +1,9 @@
-﻿@using ViewModelFun.Models
-@model Message
+﻿@model string
 @{
     ViewData["Title"] = "Home Page";
 }
 
 <main class="container">
     <h1 class="display-4 text-center mb-5">Here is a Message!</h1>
-    <p class="blockquote text-justify">@Model.Content</p>
+    <p class="blockquote text-justify">@Model</p>
 </main>
