--- a/Views/Home/Numbers.cshtml
+++ b/Views/Home/Numbers.cshtml
@@ -1,5 +1,4 @@
-@using ViewModelFun.Models
-@model Numbers
+@model int[]
 
 @{
     ViewData["Title"] = "Home Page";
@@ -10,7 +9,7 @@
     <div class="row">
       <div class="col-2 border mx-auto text-center">
         @{
-          foreach (int num in Model.numbers)
+          foreach (int num in Model)
           {
             <p>@num</p>
           }
